Bug 1659761 - Restrict the fix of bug 1650488 to desktop only. r=kats, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D88356